<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.CardView
        android:id="@+id/card_dialog_fullscreen"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_dialog_fullscreen_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="4dp"
                android:src="@drawable/ic_close_white_24dp"
                android:tint="@color/graydeep" />

            <TextView
                style="@style/Base.DialogWindowTitle.AppCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Login"
                android:gravity="center"
                android:textColor="@color/graydeep" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/img_full_screen_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_dialog_fullscreen"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:layout_below="@+id/card_dialog_fullscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_titlr"
                    android:textColor="@color/main"
                    android:textSize="22dp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_dialog_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/main"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:theme="@style/MyEditTextStyle2"
                        android:id="@+id/login_dialog_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:textColor="#000000"
                        android:textColorHint="@color/main"
                        android:textCursorDrawable="@drawable/cursored"
                        app:backgroundTint="@color/main" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_dialog_input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/main"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:theme="@style/MyEditTextStyle2"
                        android:id="@+id/login_dialog_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="#000000"
                        android:textColorHint="@color/main"
                        android:textCursorDrawable="@drawable/cursored"
                        app:backgroundTint="@color/main" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_dialog_login"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/green_round"
                    android:layout_marginTop="20dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_dialog_forgotpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/forgotpw"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_weight="3.5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/footer"/>
        </LinearLayout>
    </LinearLayout>




</RelativeLayout>