<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginBottom="?attr/actionBarSize"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical">
    <!--android:background="@drawable/back"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:layout_weight="5.4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:src="@drawable/ic_arrow_back_black_24dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/forgot"
                    android:textColor="@color/main"
                    android:textSize="22dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/forgot_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/main"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                    <EditText
                        android:theme="@style/MyEditTextStyle2"
                        android:id="@+id/forgot_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:textColor="#000000"
                        android:textColorHint="@color/main"
                        android:textCursorDrawable="@drawable/cursored"
                        app:backgroundTint="@color/main" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/green_round"
                    android:layout_marginTop="20dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_weight="5.3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/footer"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>