<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginBottom="?attr/actionBarSize"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".Fragments.Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_signup_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SIGN UP WITH EMAIL"
                    android:textColor="@color/main"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/signup_input_layout_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/main"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                        <EditText
                            android:id="@+id/signup_input_fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Full Name"
                            android:inputType="text"
                            android:textColor="@color/main"
                            android:textColorHint="@color/main"
                            android:textCursorDrawable="@drawable/cursored"
                            android:theme="@style/MyEditTextStyle2"
                            app:backgroundTint="@color/main" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/signup_input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColorHint="@color/main"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                        <EditText
                            android:id="@+id/signup_input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/main"
                            android:textColorHint="@color/main"
                            android:textCursorDrawable="@drawable/cursored"
                            android:theme="@style/MyEditTextStyle2"
                            app:backgroundTint="@color/main" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/signup_input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textColorHint="@color/main"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                        <EditText
                            android:id="@+id/signup_input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@color/main"
                            android:textColorHint="@color/main"
                            android:textCursorDrawable="@drawable/cursored"
                            android:theme="@style/MyEditTextStyle2"
                            app:backgroundTint="@color/main" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/green_round"
                        android:inputType="text"
                        android:text="@string/createacc"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_signup_alreadyacc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/alreadyaccount"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:text="LOGIN"
                            android:background="@drawable/loginbg_border"
                            android:padding="5dp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3.5"
            android:gravity="bottom">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/footer" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>